# easy-qt-models

./: README.md  pyproject.toml
easy_qt_models/: __init__.py  base_collection.py  base_model.py  proxies.py  search.py
examples/: examples.py
