[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pre-commit>=2.21.0",
]

[project]
name = "easy-qt-models"
version = "0.1.0"
description = "Friendly interface to the Qt Model system"
authors = [
    {name = "sharpencrag", email = "ed.whetstone@gmail.com"},
]
dependencies = [
    "pyside2>=5.13.2",
]
requires-python = ">=3.7"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
